test/invalid/baseline/iterator.txt
Syntax error at line 5 in iterator.widl, since `interface SessionManager`:
  Session iterator;
                  ^ Invalid operation
